--- a/3point-alpha/tsconfig.json
+++ b/3point-alpha/tsconfig.json
@@ -10,11 +10,13 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    
   },
-  "include": ["src"]
+  "include": ["src", "emp.ts"]
+
 }
