--- a/3point-alpha/tsconfig.json
+++ b/3point-alpha/tsconfig.json
@@ -10,13 +10,11 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    
+    "jsx": "react-jsx"
   },
-  "include": ["src", "emp.ts"]
-
+  "include": ["src"]
 }
