--- a/3point-alpha/package.json
+++ b/3point-alpha/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
+    "@react-oauth/google": "^0.11.0",
+    "axios": "^1.4.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2"
   },
@@ -22,6 +24,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
+    "dotenv": "^16.3.1",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
